[gd_scene load_steps=4 format=2]

[ext_resource path="res://systems/RoomScrollCamera.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 4.63779, 77 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 137, 5 )

[node name="RoomScrollCamera" type="Camera2D" index="0"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.2, 0.2 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 1 )
_sections_unfolded = [ "Drag Margin", "Editor", "Smoothing", "Transform" ]

[node name="Area_Right" type="Area2D" parent="." index="0"]

position = Vector2( 141, 0 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Audio Bus", "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Right" index="0"]

shape = SubResource( 1 )

[node name="Area_Left" type="Area2D" parent="." index="1"]

position = Vector2( -141, 0 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Audio Bus", "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Left" index="0"]

shape = SubResource( 1 )

[node name="Area_Top" type="Area2D" parent="." index="2"]

position = Vector2( 0, -84 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Top" index="0"]

shape = SubResource( 2 )

[node name="Area_Bottom" type="Area2D" parent="." index="3"]

position = Vector2( 1, 85 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Bottom" index="0"]

shape = SubResource( 2 )

[connection signal="body_entered" from="Area_Right" to="." method="_on_Area_Right_body_entered"]

[connection signal="body_entered" from="Area_Left" to="." method="_on_Area_Left_body_entered"]

[connection signal="body_entered" from="Area_Top" to="." method="_on_Area_Top_body_entered"]

[connection signal="body_entered" from="Area_Bottom" to="." method="_on_Area_Bottom_body_entered"]


